--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "enquire": "0.0.2",
+    "jwt-decode": "^2.2.0",
     "pouchdb": "^7.2.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
